@@ -20,6 +20,7 @@ v8.0.29
 - BUG#33747585: Fix error when using an expression as a column without an alias
 - BUG#33729842: Character set 'utf8mb3' support
 - BUG#33481203: OverflowError for MySQL BIGINT on c-ext
+- BUG#33203161: Exception is thrown on close connection with pooling
 - BUG#30203754: Prepared stmt fails on cext with BIGINTS
 - BUG#28877987: Return bytes or bytearray if decoding fails
 - BUG#27634914: Remove mention of unsupported functionality in Session docstring
